# pico_experiments

./: .gitignore  README.md  gdbinit  pico.cfg
channel_irq/: CMakeLists.txt  channel_irq.c
elf2uf2/: elf2uf2
elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
fade_led/: CMakeLists.txt  simple_pwm_dma_led_fade.c
flashled/: CMakeLists.txt  flashled.S  sdklink.c
flashled2/: CMakeLists.txt  flashled2.S
hello_asm/: CMakeLists.txt  HelloWorld.S
hello_pio/: CMakeLists.txt
hello_spi/: CMakeLists.txt  board_picksix.c  board_picksix.h  hello.c  spi_xra1403.h
hello_usb/: CMakeLists.txt  hello_usb.c
hex_calc/: CMakeLists.txt  HexCalc.S
pio_blink/: CMakeLists.txt
pioasm/: pioasm
pioasm/src/PioasmBuild-stamp/: PioasmBuild-source_dirinfo.txt
timeint/: CMakeLists.txt  timeint.S
two_pin_pio/: CMakeLists.txt  main.c  stepper.pio
